fix readme, fix swagger
